# srcomp-http

./: .gitignore  .readthedocs.yaml  .travis.yml  README.rst  pyproject.toml  setup-requirements.txt  setup.cfg  setup.py
.circleci/: config.yml  requirements.txt
docs/: api.rst  conf.py  endpoints.rst  index.rst  internals.rst  requirements.txt
script/docs/: build.sh
script/linting/: lint  requirements.txt
script/release/: build.sh  release  tag
script/typing/: requirements.txt
sr/comp/http/: __main__.py  errors.py  escaping_formatter.py  json_encoder.py  json_provider.py  manager.py  query_utils.py  server.py  structs.py  update.py
tests/: test_api.py  test_difference_string.py  test_json.py  test_manager.py  test_query_utils.py
